[package]
name = "realm"
version = "2.0.0"
authors = ["zhboner <zhboner@gmail.com>", "honwen<https://github.com/honwen>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5", features = ["full"] }
trust-dns-resolver = "0.20"
futures = "0.3"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
